--- a/pom.xml
+++ b/pom.xml
@@ -110,8 +110,9 @@
                                 </relocation>
                             </relocations>
                             <transformers>
-                                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer"/>
-
+                                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+                                    <mainClass>org.example.controller.PortfolioController</mainClass>
+                                </transformer>
                             </transformers>
                         </configuration>
                     </execution>
